@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.9830 2005/04/11 20:40:24 recht Exp $
+$NetBSD: CHANGES,v 1.9831 2005/04/11 23:01:20 reinoud Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -1993,3 +1993,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated postgresql80 to 8.0.2 [recht 2005-04-11]
 	Removed postgresql80-lib [recht 2005-04-11]
 	Removed postgresql80-docs [recht 2005-04-11]
+	Updated blender to 2.36nb2 [reinoud 2005-04-11]
